# yzzo

./: .gitignore  README.md  app.yzzo.yzzo.desktop  app.yzzo.yzzo.metainfo.xml  bunfig.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
coverage/: lcov.info
docs/: CRASH_TESTING.md  TESTING.md
src/: App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  Entitlements.appstore.plist  Entitlements.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251205020934_create_items_table.sql  20251211013027_add_global_hotkeys.sql  20251213193808_add_hold_behavior.sql  20251229000000_add_image_support.sql  20260108000000_add_bumped_at_index.sql
src-tauri/src/: clipboard_watcher.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: hotkeys.rs  items.rs  mod.rs
src-tauri/src/commands/tests/: hotkeys_test.rs  items_test.rs
src/api/: tauriApi.ts
src/components/: Button.tsx  Header.tsx  IconButton.tsx  Input.tsx  index.ts
src/components/home/: HighlightedText.tsx  ImagePreview.tsx  index.ts
src/components/settings/: SettingsItem.tsx  index.ts
src/components/ui/: ExternalLink.tsx
src/components/ui/buttons/: Button.tsx  IconButton.tsx
src/components/ui/forms/: HelperText.tsx  Input.tsx  Label.tsx  Radio.tsx  index.ts
src/constants/: index.ts  keyboard.ts  links.ts  storage.ts
src/contexts/: LanguageContext.tsx  ThemeContext.tsx  index.ts
src/contexts/__tests__/: LanguageContext.test.tsx  ThemeContext.test.tsx
src/hooks/: index.ts  useClipboardWatcher.ts  useFirstLaunchNotification.ts  useGlobalHotkey.ts
src/hooks/__tests__/: clipboardWatcher.test.ts  useClipboardWatcher.test.ts  useGlobalHotkey.test.ts
src/i18n/: index.ts
src/i18n/__tests__/: i18n-validation.ts
src/i18n/locales/: index.ts
src/i18n/locales/common/: en.json  index.ts  pt.json
src/i18n/locales/components/: en.json  index.ts  pt.json
src/models/: Item.ts
src/pages/: Home.tsx  Root.tsx  Settings.tsx  index.ts
src/pages/__tests__/: Home.test.tsx  Settings-language-switch.test.tsx  Settings.test.tsx
src/pages/settings/: About.tsx  Hotkeys.tsx  HotkeysPage.tsx  LanguagePage.tsx  Preferences.tsx  Privacy.tsx  index.tsx
src/pages/settings/__tests__/: Hotkeys.test.tsx  Preferences.test.tsx
src/routes/: __root.tsx  index.tsx  router.tsx  settings.tsx  settings_.about.tsx  settings_.hotkeys.tsx  settings_.preferences.tsx  settings_.preferences_.language.tsx  settings_.privacy.tsx
src/styles/: App.css  constants.ts  global.css  index.ts
src/test/: matchers.d.ts  setup.ts
src/test/mocks/: tauri.ts
src/test/utils/: i18n-mock.ts  test-utils.tsx
src/types/: hotkeys.ts  index.ts  language.ts
