[package]
name = "yzzo"
version = "1.0.5"
description = "YZZO, a clipboard manager built for simplicity and productivity."
authors = ["Lucca Romaniello"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yzzo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.31"
arboard = "3.6.1"
image = "0.25"
base64 = "0.22"
urlencoding = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3.24.0"
